[package]
name = "plump_job_cost_effectiveness_analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3.5"
tokio = { version = "1.34.0", features = ["full"] }
scraper = "0.18"
futures = "0.3.15"
tiktoken-rs = "0.5.7"
